# lento

./: .gitignore  .gitmodules  Cargo.toml  README.md  index.js  lib.js
examples/: demo.rs
skia-window/: .gitignore  Cargo.toml
skia-window/src/: gl_renderer.rs  gl_surface.rs  lib.rs  main.rs  skia_renderer.rs  skia_window.rs  soft_renderer.rs  soft_surface.rs  surface.rs
src/: animation.rs  app.rs  base.rs  border.rs  cache.rs  cursor.rs  element.rs  event.rs  ext_animation.rs  frame.rs  lib.rs  loader.rs  number.rs  performance.rs  renderer.rs  style.rs  timer.rs  websocket.rs
src/element/: entry.rs  label.rs  scroll.rs  scroll_bar.rs  text.rs
src/element/text/: text_paragraph.rs
src/ext/: common.rs  ext_animation.rs  ext_appfs.rs  ext_audio.rs  ext_base64.rs  ext_dialog.rs  ext_env.rs  ext_fetch.rs  ext_frame.rs  ext_fs.rs  ext_http.rs  ext_localstorage.rs  ext_tray.rs  ext_websocket.rs  mod.rs
src/js/: js_deserialze.rs  js_engine.rs  js_runtime.rs  js_serde.rs  js_value_util.rs  mod.rs
src/macro_mod/: element.rs  event.rs  event_handling.rs  js_api.rs  js_interop.rs  js_type.rs  mod.rs  style.rs
